--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,27 +5,36 @@
     android:paddingLeft="25dp"
     android:paddingRight="25dp"
     android:background="@drawable/bg_720x1280" >
-	
-    <ImageView
-        android:id="@+id/imgName"
+    <ImageButton
+        android:id="@+id/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="325dp"
-        android:src="@drawable/bu_email"
-        android:background="@null"/>
+        android:src="@drawable/selector_login_button"
+        android:background="@null"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="80dp"
+        />
     <ImageView
         android:id="@+id/imgPass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imgName"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="7dp"
+        android:layout_above="@id/buttonLogin"
+        android:layout_marginBottom="7dp"
         android:background="@null"
         android:src="@drawable/bu_password"
-
         />
+    <ImageView
+        android:id="@+id/imgName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/imgPass"
+        android:layout_marginBottom="7dp"
+        android:layout_alignParentLeft="true"
+        android:src="@drawable/bu_email"
+        android:background="@null"/>
+
     <EditText
         android:id="@+id/editName"
         android:layout_width="270dp"
@@ -56,16 +65,7 @@
 		android:textColor="#939393"
         android:textSize="15sp"/>
         
-    <ImageButton
-        android:id="@+id/buttonLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/selector_login_button"
-        android:background="@null"
-        android:layout_marginTop="7dp"
-        android:layout_below="@id/editPass"
-        android:layout_alignRight="@id/editPass"
-        />
+
     <TextView
         android:id="@+id/showResult"
         android:layout_width="wrap_content"
@@ -75,6 +75,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginBottom="15dp"
+        
         ></TextView>
-
+ 
 </RelativeLayout>
