--- a/res/layout/activity_push.xml
+++ b/res/layout/activity_push.xml
@@ -4,25 +4,28 @@
     android:layout_height="match_parent"
     android:padding="0dp"
     android:background="@drawable/bg_720x1280" >	
-    <TextView
-        android:id="@+id/textWelcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/welcome_msg"
-        android:textColor="#46AAB9"
-        android:textSize="19sp"
-        android:gravity="center"
-        android:layout_marginTop="350dp"
-        android:layout_centerHorizontal="true"
-        ></TextView>
     <ImageButton 
         android:id="@+id/buttonPush"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="430dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="120dp"
         android:layout_centerHorizontal="true"
         android:src="@drawable/selector_push_button"
         android:background="@null"/>
+    <TextView
+        android:id="@+id/textWelcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome to\nLightspeed Demo"
+        android:textColor="#46AAB9"
+        android:textSize="19sp"
+        android:gravity="center"
+        android:layout_above="@id/buttonPush"
+        android:layout_marginBottom="30dp"
+        android:layout_centerHorizontal="true"
+        ></TextView>
+
     <TextView
         android:id="@+id/showResult"
         android:layout_width="wrap_content"
@@ -32,5 +35,6 @@
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginBottom="15dp"
+        
         ></TextView>
 </RelativeLayout>
